--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <nav>
         <div class="logo">Aaron Huynh <span class="logo-for">for</span> <img src="images/employment-hero-logo.png" alt="Employment Hero" class="logo-img"></div>
         <div class="nav-right">
+            <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">🌙</button>
             <a href="https://docs.google.com/document/d/172kIlPCfOWjzP-einxLW5Fp1NuWgEf7eoPLe7AZdfho/edit?usp=sharing" target="_blank" class="nav-link">Full Report 📄</a>
             <div class="nav-dots">
                 <button class="nav-dot active" data-page="0" aria-label="Go to page 1"></button>
@@ -140,9 +141,7 @@
                     </div>
                 </div>
                 <div class="image-block">
-                    <div class="image-placeholder">
-                        <img src="images/page3.png" alt="Investigator pondering a mystery">
-                    </div>
+                    <img src="images/page3.png" alt="Investigator pondering a mystery">
                 </div>
             </div>
         </section>
